# Projetomod

./: INDICADORES CONTROLE GERAL SEGURANÇA - 2026.xlsx  README.md  Segurança Patrimonial.xlsx  cdumm.spec  data_loader.py  database.py  iniciar_dashboard.bat  invokeall.bat  invokedebloat.bat  migrate_db.py  panel_base_dados.py  panel_executivo.py  panel_instrucoes.py  pyproject.toml  requirements.txt  sp_indicadores.db  styles.py  test_import.py  version_info.txt
.serena/: project.yml
.serena/memories/: conventions.md  core.md  suggested_commands.md  task_completion.md  tech_stack.md
Implementação/: implementation_plan.md  walkthrough.md
Tio robson/: app.py  data_loader.py  database.py  main_window.py  panel_analise_critica.py  panel_base_dados.py  panel_config.py  panel_executivo.py  panel_historico.py  panel_indicadores.py  panel_pendencias.py  panel_subindicadores.py  styles.py  validate_data.py  validate_migration.py  widgets.py
dControl/: dControl.ini
invoke/: MSI MODE.bat  PowerEnergy disable.bat  Serviços.bat  WINDOWS CLEANER.bat  cpu.bat  internet.bat  scheduled task.bat  securityhealth.bat  smartscreen disabled.bat
invoke/invoke1/: RemoveBloatwareRegKeys.bat  UnpinStart.bat  (+4 more)
sp_dashboard/: SP_Dashboard.spec  _fix_annotation.py  app.py  data_loader.py  database.py  inspect_db.py  main_window.py  mapping_db.py  panel_analise_critica.py  panel_base_dados.py  panel_config.py  panel_executivo.py  panel_historico.py  panel_indicadores.py  panel_instrucoes.py  panel_pendencias.py  panel_subindicadores.py  styles.py  widgets.py
src/: timing_test.txt
(+50 files in other folders)
